--- a/assets/app/student/games/game/countdown-dialog/countdown-dialog.html
+++ b/assets/app/student/games/game/countdown-dialog/countdown-dialog.html
@@ -1,2 +1,2 @@
-<!--<img [src]="activeNumberImg" [@fade]="fadeState" (@fade.done)="doneWithFade($event)">-->
-<img [src]="activeNumberImg">
+<img [src]="activeNumberImg" [@fade]="fadeState" (@fade.done)="doneWithFade($event)">
+<!--<img [src]="activeNumberImg">-->
